[package]
name = "wgpu-misc"
version = "0.1.0"
authors = ["Mikko Lehtonen <scoopr@iki.fi>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["async", "framebuffer"]
async = ["futures-executor", "wasm-bindgen-futures"]
framebuffer = ["raw-window-handle"]

[dev-dependencies]
winit = { version="0.29.3", features = ["rwh_05"], default-features = false }
env_logger = "0.10.1"

[dependencies]
wgpu = "0.18.0"
#wgpu = { path="../../ext/wgpu/wgpu" }
raw-window-handle = { version = "0.5.2", optional = true }

# Native deps
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-executor = { version = "0.3.29", optional = true }

# Wasm deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4.38", optional = true }
