[package]
name = "wgpu-misc"
version = "0.1.0"
authors = ["Mikko Lehtonen <scoopr@iki.fi>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["async", "framebuffer"]
async = ["pollster", "wasm-bindgen-futures"]
framebuffer = ["raw-window-handle"]

[dev-dependencies]
winit = { version = "0.30.5", features = ["rwh_06"], default-features = false }
env_logger = "0.11.5"

[dependencies]
wgpu = "23.0.0"
#wgpu = { path="../../ext/wgpu/wgpu" }
raw-window-handle = { version = "0.6", optional = true }

# Native deps
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { version = "0.4.0", optional = true }

# Wasm deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4.43", optional = true }
